<resources>
    <string name="app_name">Some-assignment</string>
    <string name="settings">Settings</string>

    <string name="server_title">Server Info</string>
    <string name="server_subhead">Host and Port information</string>
    <string name="server_hint_host_info">Server host</string>
    <string name="server_hint_port_info">Server port</string>


    <string name="navigation_title">Options</string>
    <string name="navigation_main">Main</string>
    <string name="navigation_server_info">Server Info</string>
    <string name="navigation_settings">Settings</string>
    <string name="navigation_sub_items">Sub items</string>
    <string name="broker_publisher_name">Publisher Name</string>
    <string name="broker_publisher_name_sub">Broker Pulisher name information</string>
    <string name="broker_publisher_name_hint">Name of your broker publisher</string>
</resources>
