<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:id="@+id/samples_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/samples_fab"
        android:orientation="vertical"
        android:padding="@dimen/regular_offset">

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/sample_title"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/server_title" />

        <TextView
            android:id="@+id/sample_subhead"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/server_subhead" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/sample_text_username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <EditText
                android:id="@+id/server_text_host"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_hint_host_info" />

        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/server_text_port"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/server_hint_port_info"
                android:inputType="number" />

        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_marginTop="20dp"
            android:id="@+id/broker_publisher_name"
            style="@style/TextAppearance.AppCompat.Title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/broker_publisher_name" />

        <TextView
            android:id="@+id/broker_publisher_name_sub"
            style="@style/TextAppearance.AppCompat.Subhead"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/broker_publisher_name_sub" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/publisher_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/broker_publisher_name_hint" />

        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/samples_fab"
        android:layout_width="match_parent"
        android:layout_height="128dp"
        android:layout_alignParentBottom="true"
        android:fitsSystemWindows="true">

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            android:layout_margin="@dimen/regular_offset"
            android:src="@drawable/ic_done_24dp" />

    </android.support.design.widget.CoordinatorLayout>

</RelativeLayout>